--- a/index.html
+++ b/index.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
-      <link rel="stylesheet" href="style.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <title>Portfolio </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="rowfooter">
-            <a href="facebook.com"> <p>About Me</p> </a>
-            <a href="docs.google.com"> <p>Portfolio</p> </a>
-            <a href="instagram.com"> <p>Contact </p></a>
+         <div>
+        <div class="Gur"> 
+        <a href="aboutme.html"><p>About Me</p> </a>
+        <a href="contact.html"><p>Contact</p> </a>
+        <a href="portfolio.html"> <p>Portfolio</p> </a>
         </div>
-        <div class="rowmid">
-            <h1>Jessiah Lucien</h1>
-            <img class="headshot"src="https://images.pexels.com/photos/68147/waterfall-thac-dray-nur-buon-me-thuot-daklak-68147.jpeg?auto=compress&cs=tinysrgb&h=350">
-            <h1></h1>
+        <div id="ir">m
+        <h1>Jessiah Lucien</h1>
+        
+        <img src="https://ci6.googleusercontent.com/proxy/P6VY07ySCwzedPxTWr7NFowWSmNiWRTpu94256y_UhK7wiOp5aSRiBuZ9R4cqZuD1ZYr64nyjOh9HBV4TfxXvlb2dQp84vzsmP2OvsPBylKkcbqHlp5NbutiysroMQZO7e0ITjrB2vHuEBhB-rHQWeixtA7dei99kDXSR9EUNO6VAQjNFsfVYDCfnLhCU1-9XEZbRFCGnfToL_8MfromIHi3msuPS6VvvIxrgD4N4HdjcqJqROKo597XSB9yEfvUzRC5xOnzLL-ihjYg6g3AHiHM5t2-Y_9HyHYorGstWYX34V1pui1HG5eNXTVEE82q3Ub7=s0-d-e1-ft#https://scontent-lga3-1.cdninstagram.com/vp/5b654bdcaabbe33394f70772f607b5ac/5BFAA678/t51.2885-15/e35/s480x480/15101604_1804655643086443_5066688385544880128_n.jpg?se=7&ig_cache_key=MTM4OTUyNDg2MDQxNDQ4NDU2OQ==.2-w480h480"> 
         </div>
-        <a href= "http://www.facebook.com/ "class="fa fa-facebook"></a>
-        <a href="twitter.com" class="fa fa-twitter"></a>
-            
-        <div class="row contact">
-                <p>jessiahl</p>
-                <p>jessiah</p>
-                <p>Jessiah Lucien</p>       
-        </div>
-         <div class="row footer">
-            <p>Copyright © Jessiah LLC 2018</p>
         </div>
     </body>
-</html
+</html>
